# phlower

./: .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  Makefile  Makefile.docker  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  sg_execution_times.html  usage.html
.github/workflows/: gh_pages.yml
_downloads/0953145e59ada4e8a11b742a56988ff4/: 02_model_definition_by_yaml_file.py
_downloads/0eb4c6068b55102daf56ad0a3da6baf3/: 03_high_level_api_for_scaling_training_and_prediction.ipynb
_downloads/15af1fc81b615371e46cf85a99e84a46/: 03_high_level_api_for_scaling_training_and_prediction.py
_downloads/423ba50692c93f8eeef5e52a465bd679/: 01_phlower_tensor_basic.ipynb
_downloads/498ea8c83d7419242d5ea5c373674731/: 02_model_definition_by_yaml_file.ipynb
_downloads/7ad2419055ea15ab824365d516b2f0a5/: 01_phlower_tensor_basic.py
_modules/: index.html
_modules/phlower/settings/: _group_setting.html  _group_settings.html  _model_setting.html  _module_setting.html  _phlower_setting.html  _predictor_setting.html  _scaling_setting.html  _trainer_setting.html
_sources/: index.rst.txt  sg_execution_times.rst.txt  usage.rst.txt
_sources/reference/: index.rst.txt  nn.rst.txt  presets.rst.txt  services.rst.txt  settings.rst.txt  tensors.rst.txt
_sources/tutorials/: index.rst.txt
_sources/tutorials/basic_usages/: 01_phlower_tensor_basic.rst.txt  02_model_definition_by_yaml_file.rst.txt  03_high_level_api_for_scaling_training_and_prediction.rst.txt  index.rst.txt  sg_execution_times.rst.txt
_static/: documentation_options.js
docker/: .gitignore  Dockerfile  Makefile  cpu.Dockerfile  gpu.Dockerfile
docs/source/: .gitignore  conf.py  index.rst  render.py
docs/source/_static/: custom.css
docs/source/_templates/: nn.rst.jinja2  presets.rst.jinja2
docs/source/reference/: .gitignore  index.rst  nn.rst  services.rst  settings.rst  tensors.rst
docs/source/tutorials/: index.rst
examples/conjugate_gradient_group/: README.md  cg.yml  main.py
examples/interpolator/: README.md  interpolator.yml  main.py
examples/pinn/: README.md  main.py  pinn.yml
examples/similarity_equivariant_net/: README.md  main.py  similarity_equivariant_mlp.yml
reference/: index.html  nn.html  presets.html  services.html  settings.html  tensors.html
src/phlower/: __init__.py  logging.py  version.py
src/phlower/_base/: __init__.py  _batch.py  _dimension.py
src/phlower/_fields/: __init__.py  _simulation_field.py
src/phlower/_io/: __init__.py  _directory.py  _file_builder.py
src/phlower/base/: __init__.py
src/phlower/collections/: __init__.py
src/phlower/data/: __init__.py  _bunched_data.py  _collate_fn.py  _data_loader.py  _datasets.py  _lumped_data.py  _utils.py
src/phlower/io/: __init__.py  _directory.py  _file_builder.py  _model_selector.py
src/phlower/nn/: __init__.py  _group_module.py  _interface_iteration_solver.py  _interface_layer.py  _interface_module.py  _iteration_solver.py  _phlower_module_adapter.py  _phlower_module_adpter.py  _phlower_network.py  _preset_group_module_adapter.py  _utils.py
src/phlower/settings/: __init__.py  _data_setting.py  _debug_parameter_setting.py  _group_setting.py  _group_settings.py  _interface.py  _iteration_solver_setting.py  _model_setting.py  _model_settings.py  _module_parameter_setting.py  _module_setting.py  _nonlinear_solver_setting.py  _optimizer_setting.py  _phlower_setting.py  _predictor_setting.py  _preset_group_parameter_setting.py  _preset_group_setting.py  _resolver.py  _scaling_setting.py  _time_series_sliding_setting.py  _trainer_setting.py
src/phlower/tensors/: __init__.py  _dimensions.py  _phlower_tensor.py  _physics_tensor.py  _units.py
src/phlower/testing/: __init__.py  _custom_hash.py
src/phlower/utils/: __init__.py  _calculate_grad.py  _concatenator.py  _converter.py  _dimensions_class.py  _encryption.py  _env.py  _extended_simulation_field.py  _lazy_import.py  _logging.py  _multiprocessor.py  _optimizer.py  _progress_bar.py  _random.py  _schedulers.py  _timer.py  calculation_state.py  calculations.py  encryption.py  enums.py  exceptions.py  preprocess.py  sliding_window.py  typing.py
tests/: conftest.py  test_logging.py  test_version.py
tests/e2e_test/: test_train.py
tests/e2e_tests/: .gitignore  conftest.py  test_parallel_run.py  test_predict.py  test_preprocess.py  test_train.py
tests/e2e_tests/data/: predict_specified.yml  predict_with_gpu.yml  preprocess.yml  setting.yml  train.yml  train_batch_size.yml  train_batch_size_gpu.yml  (+3 more)
tests/test_base/: test_dimensions.py
tests/test_data/: conftest.py  test_data_loader.py  test_datasets.py  test_lazy_dataset.py  test_on_memory_dataset.py
tests/test_io/: test_directory.py  test_model_selector.py
tests/test_nn/: test_adaptor_group.py  test_group_module.py  test_phlower_module_adapter.py  test_preset_group_module_adapter.py  test_utils.py
tests/test_settings/: test_adaptor_group_setting.py  test_group_setting.py  test_iteration_solver_setting.py  test_model_settings.py  test_nonlinear_solver_setting.py  test_phlower_setting.py  test_predictor_setting.py  test_preset_group_setting.py  test_scaling_setting.py  test_time_series_sliding_setting.py  test_trainer_setting.py  test_version_compat.py
tests/test_tensors/: test__dimensions.py  test__phlower_tensor.py  test__physics_tensor.py  test__physics_unit.py
tests/test_testing/: test_hash.py
tests/test_utils/: test_encryption.py  test_env.py  test_extended_simulation_field.py  test_logging.py  test_multiprocessor.py  test_optimizer.py  test_preprocess.py  test_progress_bar.py  test_schedulers.py  test_sliding_window.py  test_timer.py
tutorials/: .gitignore  README.rst  index.html
tutorials/basic_usages/: 01_phlower_tensor_basic.html  02_model_definition_by_yaml_file.html  02_model_definition_by_yaml_file.py  03_high_level_api_for_scaling_training_and_prediction.html  03_high_level_api_for_scaling_training_and_prediction.py  README.rst  index.html  sg_execution_times.html
tutorials/basic_usages_images/: CYCLE_MODEL.mmd  SUB_GROUP.mmd
(+539 files in other folders)
