[tool.poetry]
name = "phlower"
version = "0.2.0"
description = "This is a Python package which helps you handle GNN especially for physics problems."
authors = ["sakamoto <sakamoto@ricos.co.jp>"]
readme = "README.md"
license="Apache-2.0"
packages = [
    {include = "phlower", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.0"
scipy = "^1.13.0"
pycryptodomex = "^3.20.0"
pyyaml = "^6.0.1"
dagstream = "^0.1.5"
scikit-learn = "^1.5.0"
pipe = "^2.2"
pyvista = "^0.43.10"
tqdm = "^4.66.4"
pandas = "^2.2.2"
einops = "^0.8.0"
torch = "^2.5.0"

[tool.poetry.extras]
cu124 = ["torch", "torchvision"]
cpu = ["torch", "torchvision"]


[tool.poetry.group.cpu]
optional = true
[tool.poetry.group.cpu.dependencies]
torch = { version = "^2.5.0", source = "torch_cpu", markers = "extra == 'cpu' and extra != 'cu124'" }
torchvision = { version = "^0.20.1", source = "torch_cpu", markers = "extra == 'cpu' and extra != 'cu124'" }

[[tool.poetry.source]]
name = "torch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.poetry.group.cu124]
optional = true
[tool.poetry.group.cu124.dependencies]
torch = { version = "^2.5.0", source = "torch_cu124", markers = "extra=='cu124' and extra!='cpu'" }
torchvision = { version = "^0.20.1", source = "torch_cu124", markers = "extra=='cu124' and extra!='cpu'" }


[[tool.poetry.source]]
name = "torch_cu124"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
mypy = "^1.8.0"
pytest-cov = "^4.1.0"
ruff = "^0.4.10"
hypothesis = {extras = ["numpy"], version = "^6.115.3"}


[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
sphinx-fontawesome = "^0.0.6"
sphinx-gallery = "^0.17.0"
sphinxcontrib-mermaid = "^0.9.2"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib"
]
markers = [
    "e2e_test: marks tests as End-to-End test (deselect with '-m not e2e_test')",
    "gpu_test: marks tests as test using GPUs (deselect with '-m not gpu_test')",
    "need_multicore: marks tests which need multiple cores"
]

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 80
indent-width = 4

# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
]
ignore = ["ANN003", "ANN101", "ANN102", "ANN204"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.flake8-annotations]
suppress-none-returning = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/phlower/_base/**/*.py" = ["ANN401"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
