[project]
name = "phlower"
version = "0.4.0-dev0"
description = "This is a Python package which helps you handle GNN especially for physics problems."
authors = [{ name = "RICOS Co. Ltd." }]
requires-python = ">=3.11,<4.0"
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
    "machine-learning",
    "deep-learning",
    "graph-neural-networks",
    "pytorch",
    "scientific-computing",
    "physics-simulation",
]
maintainers = [{ name = "Riku Sakamoto", email = "sakamoto@ricos.co.jp" }]
dependencies = [
    "pydantic>=2.7.0,<3",
    "scipy>=1.13.0,<2",
    "pycryptodomex>=3.20.0,<4",
    "pyyaml>=6.0.1",
    "dagstream>=0.1.5",
    "scikit-learn>=1.5.0,<2",
    "pipe>=2.2,<3",
    "pyvista>=0.43.10,<1",
    "tqdm>=4.66.4",
    "pandas>=2.2.2",
    "einops>=0.8.0",
    "phlower_tensor>=0.1.0",
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]


[dependency-groups]
dev = [
    "pytest>=8.0.2",
    "mypy>=1.8.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.10",
    "hypothesis[numpy]>=6.115.3",
    "tomli>=2.2.1",
]
docs = [
    "sphinx>=7.2.6",
    "furo>=2024.8.6",
    "sphinx-fontawesome>=0.0.6",
    "sphinx-gallery>=0.17.0",
    "sphinxcontrib-mermaid>=0.9.2",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.5.1",
  "torchvision>=0.20.1",
]
cu118 = [
  "torch>=2.5.1",
  "torchvision>=0.20.1",
]
cu124 = [
  "torch>=2.5.1",
  "torchvision>=0.20.1",
]


[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu118" },
    { extra = "cu124" },
  ],
]


[tool.uv.sources]
phlower-tensor = { path = "libs/phlower_tensor" }
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu118", extra = "cu118" },
  { index = "pytorch-cu124", extra = "cu124" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.hatch.build.targets.sdist]
include = ["src/phlower"]

[tool.hatch.build.targets.wheel]
include = ["src/phlower"]

[tool.hatch.build.targets.wheel.sources]
"src/phlower" = "phlower"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib"
]
markers = [
    "e2e_test: marks tests as End-to-End test (deselect with '-m not e2e_test')",
    "gpu_test: marks tests as test to be run on GPU",
    "need_multicore: marks tests which need multiple cores",
    "need_multigpu: marks tests which need multiple GPUs"
]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError"
    ]


[tool.ruff]
include = [
  "pyproject.toml",
  "src/**/*.py",
  "src/**/*.pyi",
  "tests/**/*.py",
  "examples/**/*.py",
]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 80
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
]
ignore = ["ANN003", "ANN204"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.flake8-annotations]
suppress-none-returning = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/phlower/_base/**/*.py" = ["ANN401"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
